# summarisr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
.github/workflows/: pytest.yml
integration/: conftest.py  test_documents.py
summarisr/: document.py  main.py  storage.py  summarise.py
tests/: conftest.py  test_main.py  test_storage.py  test_summarise.py  test_summarisr.py
